# QueueSystemSimulation

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: Simulation.h  UI.h  queueStruct.h  realQ.h  stats.h
src/: Simulation.cpp  UI.cpp  main.cpp  realQ.cpp  stats.cpp
